# mybd

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
crates/bnfbd/: Cargo.toml
crates/bnfbd/src/: error.rs  lib.rs  parse.rs  search.rs  types.rs
crates/bnfbd/tests/: parse.rs  search.rs
crates/bubblebd/: Cargo.toml
crates/bubblebd/examples/: quickstart.rs
crates/bubblebd/src/: album.rs  error.rs  lib.rs  search.rs  series.rs  types.rs
crates/bubblebd/tests/: album.rs  category.rs  search.rs  series.rs
crates/data_tool/: Cargo.toml  README.md
crates/data_tool/src/: main.rs  models.rs  populate.rs
deploy/: mybd.service  update.sh
e2e/: auth.spec.ts  console-errors.spec.ts  debug-hydration.spec.ts  mobile.spec.ts  pages.spec.ts  search.spec.ts  social.spec.ts
migrations/: 001_init.sql
public/: generate-icons.sh  site.webmanifest
src/: app.rs  db.rs  google_auth.rs  gravatar.rs  leaflet.rs  lib.rs  main.rs  utils.rs
src/components/: auth_guard.rs  avatar.rs  barcode_scanner.rs  help_dialog.rs  login_dialog.rs  mod.rs  series_card.rs  sidebar.rs  top_bar.rs
src/models/: mod.rs  series.rs  social.rs  user.rs  wishlist.rs
src/pages/: album_detail.rs  author.rs  collection.rs  following.rs  home.rs  lent.rs  login.rs  mod.rs  not_found.rs  profile.rs  register.rs  results.rs  series_detail.rs  settings.rs  world.rs
src/server/: auth.rs  geocoding.rs  metadata.rs  metrics.rs  mod.rs  profile.rs  provider.rs  series.rs  slug.rs  social.rs
style/: main.css
