[workspace]
members = [".", "crates/bnfbd", "crates/bubblebd", "crates/data_tool"]

[package]
name = "mybd"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "trace"], optional = true }
http = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], optional = true }
dotenvy = { version = "0.15", optional = true }
argon2 = { version = "0.5", features = ["std"], optional = true }
password-hash = { version = "0.5", features = ["getrandom"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "HtmlScriptElement", "Storage", "KeyboardEvent", "EventTarget", "Navigator", "Clipboard", "NodeList", "DomTokenList", "console"], optional = true }
sha2 = { version = "0.11.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
bnfbd = { path = "crates/bnfbd", optional = true }
bubblebd = { path = "crates/bubblebd", optional = true }
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
unicode-normalization = "0.1"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:sqlx",
    "dep:dotenvy",
    "dep:argon2",
    "dep:password-hash",
    "dep:uuid",
    "dep:reqwest",
    "dep:sha2",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:bnfbd",
    "dep:bubblebd",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
output-name = "mybd"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "0.0.0.0:3000"
reload-port = 3001
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
tailwind-input-file = "style/main.css"
assets-dir = "public"
