[package]
name = "data_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
futures = "0.3"
anyhow = "1"
bubblebd = { path = "../bubblebd" }
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["getrandom"] }
sha2 = "0.11.0"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
